--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-input-mask": "^2.0.4",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "sharp": "^0.34.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
